--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "nodemon src/ --exec babel-node",
-    "start": "node dist/index.js",
+    "start": "node src/index.js",
     "compile": "babel src -d dist",
     "copyfiles": "ncp src/views dist/views && ncp src/public dist/public",
     "clean": "rimraf dist",
